# simensnx

./: ARCHITECTURE.md  README.md  ROADMAP.md  docker-compose.yml  import-roadmap.sh  import_roadmap.py
common/: CMakeLists.txt  GracefulShutdown.cpp  GracefulShutdown.h  JobPublisher.h  Metrics.h  PostgresConnection.cpp  PostgresConnection.h  RabbitTopics.h
db/migrations/: 0001_init.sql
deploy/helm/api-server/: Chart.yaml  values.yaml
deploy/helm/api-server/templates/: deployment.yaml  service.yaml
deploy/helm/auth-stub/: Chart.yaml  TODO.md  values.yaml
deploy/helm/auth-stub/templates/: deployment.yaml  service.yaml
deploy/helm/file-storage-service/: Chart.yaml  TODO.md  values.yaml
deploy/helm/file-storage-service/templates/: deployment.yaml  pvc.yaml  service.yaml
deploy/helm/job-orchestrator/: Chart.yaml  TODO.md  values.yaml
deploy/helm/job-orchestrator/templates/: deployment.yaml  service.yaml
deploy/helm/job-state-service/: Chart.yaml  values.yaml
deploy/helm/job-state-service/templates/: deployment.yaml  service.yaml
deploy/helm/license-server-stub/: Chart.yaml  TODO.md  values.yaml
deploy/helm/license-server-stub/templates/: deployment.yaml  service.yaml
deploy/helm/log-collector-stub/: TODO.md
deploy/helm/observability/: README.md  kube-prometheus-stack-values.yaml  loki-values.yaml  promtail-values.yaml
deploy/helm/postgres/: TODO.md
deploy/helm/rabbitmq/: TODO.md
deploy/observability/: grafana-dashboards-provider.yaml  grafana-datasources.yaml  prometheus.yaml  promtail-config.yaml
deploy/observability/grafana-dashboards/: jobs-pipeline.json
deploy/rabbitmq/: README.md  definitions.json
docs/: ADDING_A_SERVICE.md  MESSAGES.md  SCALING.md
docs/adr/: 0001-kubernetes-as-orchestrator.md  0002-windows-worker-outside-k8s.md  0003-logging-pull-not-push.md
services/api-server/: CMakeLists.txt  Dockerfile  openapi.yaml
services/api-server/src/: HttpServer.cpp  HttpServer.h  QtAmqpConnection.cpp  QtAmqpConnection.h  main.cpp
services/api-server/src/auth/: AuthStubClient.cpp  AuthStubClient.h
services/api-server/src/config/: appConfig.cpp  appConfig.h  env.h
services/api-server/src/config/http/: httpStatus.h  routes.h
services/api-server/src/config/rabbit/: rabbitConfig.h
services/api-server/src/jobs/: JobsController.cpp  JobsController.h
services/api-server/src/storage/: jobrepository.cpp  jobrepository.h
services/api-server/tests/: CMakeLists.txt  tst_appconfig.cpp  tst_httpserver.cpp  tst_httptypes.cpp  tst_jobrepository.cpp  tst_jobscontroller.cpp  tst_metrics.cpp
services/auth-stub/: CMakeLists.txt  Dockerfile
services/auth-stub/src/: main.cpp
services/file-storage-service/: CMakeLists.txt  Dockerfile
services/file-storage-service/src/: HttpServer.cpp  main.cpp
services/job-orchestrator/: CMakeLists.txt  Dockerfile
services/job-orchestrator/src/: QtAmqpConsumer.cpp  QtAmqpConsumer.h  main.cpp
services/job-state-service/: CMakeLists.txt  Dockerfile
services/job-state-service/src/: HttpServer.cpp  HttpServer.h  HttpTypes.h  QtAmqpConsumer.cpp  QtAmqpConsumer.h  main.cpp
services/license-server-stub/: CMakeLists.txt  Dockerfile
services/license-server-stub/src/: LicensePool.cpp  LicensePool.h  main.cpp
services/log-collector-stub/: CMakeLists.txt  Dockerfile
services/log-collector-stub/src/: main.cpp
services/nx-worker-stub/: CMakeLists.txt  Dockerfile  README.md
services/nx-worker-stub/src/: Metrics.h  QtAmqpConsumer.cpp  QtAmqpConsumer.h  main.cpp
